Switch to using xcore to define model

--- a/uk.ac.man.cs.mdsd.orm.model/plugin.xml
+++ b/uk.ac.man.cs.mdsd.orm.model/plugin.xml
@@ -7,10 +7,11 @@
 <plugin>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
+      <!-- @generated Orm -->
       <package
             uri="http://www.cs.man.ac.uk/mdsd/2010/ObjectRelationalMapping"
             class="uk.ac.man.cs.mdsd.orm.OrmPackage"
-            genModel="model/orm.genmodel"/>
+            genModel="model/Orm.xcore"/>
    </extension>
 
 </plugin>
