Switch to xcore definition

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -451,3 +451,42 @@ _UI_EGenericType_eTypeParameter_description = The type parameter denoted by this
 _UI_EGenericType_eClassifier_feature = EClassifier
 _UI_EGenericType_eClassifier_description = The classifier denoted by this generic type
 _UI_ETypeParameter_eBounds_feature = EBounds
+_UI_Expression_type = Expression
+_UI_Literal_type = Literal
+_UI_NullLiteral_type = Null Literal
+_UI_IntegerLiteral_type = Integer Literal
+_UI_StringLiteral_type = String Literal
+_UI_CurrentTime_type = Current Time
+_UI_Function_type = Function
+_UI_Path_type = Path
+_UI_Predicate_type = Predicate
+_UI_PredicateBooleanOperator_type = Predicate Boolean Operator
+_UI_PredicateEqualityOperator_type = Predicate Equality Operator
+_UI_PredicateComparisonOperator_type = Predicate Comparison Operator
+_UI_PredicateIsOperator_type = Predicate Is Operator
+_UI_PredicateLikeOperator_type = Predicate Like Operator
+_UI_PredicateIsEmpty_type = Predicate Is Empty
+_UI_Order_type = Order
+_UI_Asc_type = Asc
+_UI_Desc_type = Desc
+_UI_IntegerLiteral_value_feature = Value
+_UI_StringLiteral_value_feature = Value
+_UI_Function_name_feature = Name
+_UI_Predicate_negated_feature = Negated
+_UI_PredicateBooleanOperator_expressions_feature = Expressions
+_UI_PredicateBooleanOperator_operator_feature = Operator
+_UI_PredicateEqualityOperator_left_feature = Left
+_UI_PredicateEqualityOperator_right_feature = Right
+_UI_PredicateComparisonOperator_left_feature = Left
+_UI_PredicateComparisonOperator_operator_feature = Operator
+_UI_PredicateComparisonOperator_right_feature = Right
+_UI_PredicateIsOperator_left_feature = Left
+_UI_PredicateIsOperator_right_feature = Right
+_UI_PredicateLikeOperator_left_feature = Left
+_UI_PredicateLikeOperator_right_feature = Right
+_UI_PredicateIsEmpty_feature_feature = Feature
+_UI_Order_path_feature = Path
+_UI_BooleanOperator_And_literal = And
+_UI_BooleanOperator_Or_literal = Or
+_UI_ComparisionOperator_GreaterThan_literal = GreaterThan
+_UI_ComparisionOperator_LessThan_literal = LessThan
