--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.xml
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.xml
@@ -9,7 +9,7 @@
    <extension point="org.eclipse.emf.edit.itemProviderAdapterFactories">
       <!-- @generated Waf -->
       <factory
-            uri="http://www.cs.man.ac.uk/mdsd/2015/y"
+            uri="http://www.cs.man.ac.uk/mdsd/2015/WebApplicationFramework"
             class="uk.ac.man.cs.mdsd.waf.provider.WafItemProviderAdapterFactory"
             supportedTypes=
               "org.eclipse.emf.edit.provider.IEditingDomainItemProvider
@@ -17,6 +17,13 @@
                org.eclipse.emf.edit.provider.ITreeItemContentProvider
                org.eclipse.emf.edit.provider.IItemLabelProvider
                org.eclipse.emf.edit.provider.IItemPropertySource"/>
+   </extension>
+
+   <extension point="org.eclipse.emf.edit.childCreationExtenders">
+      <!-- @generated Waf -->
+      <extender
+            uri="http://www.cs.man.ac.uk/mdsd/2013/Criteria"
+            class="uk.ac.man.cs.mdsd.waf.provider.WafItemProviderAdapterFactory$CriteriaChildCreationExtender"/>
    </extension>
 
 </plugin>
