Consequencies of renaming criteria edit project

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -333,3 +333,19 @@ _UI_EGenericType_eTypeParameter_description = The type parameter denoted by this
 _UI_EGenericType_eClassifier_feature = EClassifier
 _UI_EGenericType_eClassifier_description = The classifier denoted by this generic type
 _UI_ETypeParameter_eBounds_feature = EBounds
+_UI_NullLiteral_type = Null Literal
+_UI_CurrentTime_type = Current Time
+_UI_Function_type = Function
+_UI_PredicateIsOperator_type = Predicate Is Operator
+_UI_PredicateLikeOperator_type = Predicate Like Operator
+_UI_PredicateIsEmpty_type = Predicate Is Empty
+_UI_Order_type = Order
+_UI_Asc_type = Asc
+_UI_Desc_type = Desc
+_UI_Function_name_feature = Name
+_UI_PredicateIsOperator_left_feature = Left
+_UI_PredicateIsOperator_right_feature = Right
+_UI_PredicateLikeOperator_left_feature = Left
+_UI_PredicateLikeOperator_right_feature = Right
+_UI_PredicateIsEmpty_feature_feature = Feature
+_UI_Order_path_feature = Path
