Enhance flexibity of model labels

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -490,3 +490,16 @@ _UI_BooleanOperator_And_literal = And
 _UI_BooleanOperator_Or_literal = Or
 _UI_ComparisionOperator_GreaterThan_literal = GreaterThan
 _UI_ComparisionOperator_LessThan_literal = LessThan
+_UI_ModelLabelFeature_type = Model Label Feature
+_UI_ModelLabelElement_type = Model Label Element
+_UI_ModelLabelAssociation_type = Model Label Association
+_UI_ModelLabelChildFeature_type = Model Label Child Feature
+_UI_ModelLabelChildElement_type = Model Label Child Element
+_UI_ModelLabelChildAssociation_type = Model Label Child Association
+_UI_ModelLabelElement_serviceFeature_feature = Service Feature
+_UI_ModelLabelAssociation_serviceFeature_feature = Service Feature
+_UI_ModelLabelAssociation_childFeature_feature = Child Feature
+_UI_ModelLabelChildElement_serviceFeature_feature = Service Feature
+_UI_ModelLabelChildAssociation_serviceFeature_feature = Service Feature
+_UI_ModelLabelChildAssociation_childFeature_feature = Child Feature
+_UI_ModelLabelAssociation_dynamicLabel_feature = Dynamic Label
