Allow explicit definition of controller paths

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -503,3 +503,6 @@ _UI_ModelLabelChildElement_serviceFeature_feature = Service Feature
 _UI_ModelLabelChildAssociation_serviceFeature_feature = Service Feature
 _UI_ModelLabelChildAssociation_childFeature_feature = Child Feature
 _UI_ModelLabelAssociation_dynamicLabel_feature = Dynamic Label
+_UI_SelectTarget_selectionFeature_feature = Selection Feature
+_UI_Page_path_feature = Path
+_UI_ContentUnit_path_feature = Path
