Allow interface type of model features to be defined

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -506,3 +506,5 @@ _UI_ModelLabelAssociation_dynamicLabel_feature = Dynamic Label
 _UI_SelectTarget_selectionFeature_feature = Selection Feature
 _UI_Page_path_feature = Path
 _UI_ContentUnit_path_feature = Path
+_UI_ServiceEntityElement_interfaceType_feature = Interface Type
+_UI_ServiceEntityElement_dateFormat_feature = Date Format
