Basic queries and pagination via queries

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -508,3 +508,11 @@ _UI_Page_path_feature = Path
 _UI_ContentUnit_path_feature = Path
 _UI_ServiceEntityElement_interfaceType_feature = Interface Type
 _UI_ServiceEntityElement_dateFormat_feature = Date Format
+_UI_QueryParameter_type = Query Parameter
+_UI_DynamicUnit_queryParameters_feature = Query Parameters
+_UI_Query_type = Query
+_UI_DynamicUnit_queries_feature = Queries
+_UI_Query_parameters_feature = Parameters
+_UI_Query_selection_feature = Selection
+_UI_IndexUnit_paginationQuery_feature = Pagination Query
+_UI_DataUnit_defaultSelection_feature = Default Selection
