Enable the use of queries on menu entries

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -516,3 +516,12 @@ _UI_Query_parameters_feature = Parameters
 _UI_Query_selection_feature = Selection
 _UI_IndexUnit_paginationQuery_feature = Pagination Query
 _UI_DataUnit_defaultSelection_feature = Default Selection
+_UI_QueryInstance_type = Query Instance
+_UI_QueryActual_type = Query Actual
+_UI_QueryParameter_dataType_feature = Data Type
+_UI_QueryInstance_query_feature = Query
+_UI_QueryInstance_actuals_feature = Actuals
+_UI_QueryActual_parameter_feature = Parameter
+_UI_QueryActual_value_feature = Value
+_UI_FixedActionMenuEntry_query_feature = Query
+_UI_QueryParameter_defaultValue_feature = Default Value
