Add facility for views to have featires

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -390,3 +390,6 @@ _UI_ModelLabelAttribute_element_feature = Element
 _UI_EntityFeature_columnName_feature = Column Name
 _UI_ViewAttribute_type = View Attribute
 _UI_ViewAttribute_attribute_feature = Attribute
+_UI_ModelLabelAttribute_attribute_feature = Attribute
+_UI_OrmModel_entitiesAndViews_feature = Entities And Views
+_UI_EntityOrView_partOf_feature = Part Of
