--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -397,3 +397,4 @@ _UI_x_type = x
 _UI_EntityOrView_features_feature = Features
 _UI_Feature_partOf_feature = Part Of
 _UI_EntityOrView_tableName_feature = Table Name
+_UI_Attribute_defaultValue_feature = Default Value
