Complete structure of views as sibling of entities

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -62,7 +62,6 @@ _UI_Entity_displayFeatures_feature = Display Features
 _UI_Entity_displayFormat_feature = Display Format
 _UI_Entity_daoName_feature = Dao Name
 _UI_Feature_parentEntity_feature = Parent Entity
-_UI_Feature_inputField_feature = Input Field
 _UI_Feature_headerClass_feature = Header Class
 _UI_Feature_inputClass_feature = Input Class
 _UI_Feature_displayClass_feature = Display Class
@@ -353,7 +352,6 @@ _UI_ModelLabel_type = Model Label
 _UI_ModelLabelFeature_type = Model Label Feature
 _UI_ModelLabelElement_type = Model Label Element
 _UI_ModelLabelAssociation_type = Model Label Association
-_UI_Entity_displayLabels_feature = Display Labels
 _UI_ModelLabel_labelFor_feature = Label For
 _UI_ModelLabel_format_feature = Format
 _UI_ModelLabel_features_feature = Features
@@ -362,7 +360,6 @@ _UI_ModelLabelAssociation_association_feature = Association
 _UI_ModelLabelAssociation_dynamicLabel_feature = Dynamic Label
 _UI_EntityOrView_type = Entity Or View
 _UI_View_type = View
-_UI_EntityOrView_displayLabels_feature = Display Labels
 _UI_View_encapsulates_feature = Encapsulates
 _UI_ViewFeature_type = View Feature
 _UI_ViewFeature_feature_feature = Feature
@@ -388,8 +385,6 @@ _UI_EntityFeature_parentEntity_feature = Parent Entity
 _UI_ModelLabelAttribute_type = Model Label Attribute
 _UI_ModelLabelAttribute_element_feature = Element
 _UI_EntityFeature_columnName_feature = Column Name
-_UI_ViewAttribute_type = View Attribute
-_UI_ViewAttribute_attribute_feature = Attribute
 _UI_ModelLabelAttribute_attribute_feature = Attribute
 _UI_OrmModel_entitiesAndViews_feature = Entities And Views
 _UI_EntityOrView_partOf_feature = Part Of
@@ -398,3 +393,23 @@ _UI_EntityOrView_features_feature = Features
 _UI_Feature_partOf_feature = Part Of
 _UI_EntityOrView_tableName_feature = Table Name
 _UI_Attribute_defaultValue_feature = Default Value
+_UI_EncapsulatedAssociation_type = Encapsulated Association
+_UI_EncapsulatedAssociation_association_feature = Association
+_UI_EncapsulatedAttribute_type = Encapsulated Attribute
+_UI_EncapsulatedAttribute_attribute_feature = Attribute
+_UI_ViewAssociation_opposite_feature = Opposite
+_UI_ViewAssociation_owningEnd_feature = Owning End
+_UI_ViewAssociation_bidirectional_feature = Bidirectional
+_UI_ViewAssociation_pivotTableName_feature = Pivot Table Name
+_UI_EncapsulatedAssociation_encapsulatedTarget_feature = Encapsulated Target
+_UI_EncapsulatedFeature_type = Encapsulated Feature
+_UI_EncapsulatedFeature_columnName_feature = Column Name
+_UI_ViewAssociation_cardinality_feature = Cardinality
+_UI_EntityAssociation_visible_feature = Visible
+_UI_EntityAssociation_container_feature = Container
+_UI_Label_type = Label
+_UI_Feature_keys_feature = Keys
+_UI_Feature_autoKeyName_feature = Auto Key Name
+_UI_EntityOrView_keys_feature = Keys
+_UI_EntityOrView_autoKeyName_feature = Auto Key Name
+_UI_EntityOrView_labels_feature = Labels
