URI links for nested entities

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -468,3 +468,6 @@ _UI_ServiceAssociationReference_serviceFeature_feature = Service Feature
 _UI_ServiceAssociationReference_childFeature_feature = Child Feature
 _UI_ServiceAttributeReference_attribute_feature = Attribute
 _UI_ServiceAssociationReference_association_feature = Association
+_UI_DynamicUnit_uriParent_feature = Uri Parent
+_UI_DynamicUnit_parentAssociation_feature = Parent Association
+_UI_DynamicUnit_useParentAssociationSource_feature = Use Parent Association Source
