Refine implementation of uri paths

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -471,3 +471,6 @@ _UI_ServiceAssociationReference_association_feature = Association
 _UI_DynamicUnit_uriParent_feature = Uri Parent
 _UI_DynamicUnit_parentAssociation_feature = Parent Association
 _UI_DynamicUnit_useParentAssociationSource_feature = Use Parent Association Source
+_UI_DynamicUnit_inverseAssociation_feature = Inverse Association
+_UI_EditUnit_customiseValues_feature = Customise Values
+_UI_Service_partOf_feature = Part Of
