Allow all field types to be truncated

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -474,3 +474,4 @@ _UI_DynamicUnit_useParentAssociationSource_feature = Use Parent Association Sour
 _UI_DynamicUnit_inverseAssociation_feature = Inverse Association
 _UI_EditUnit_customiseValues_feature = Customise Values
 _UI_Service_partOf_feature = Part Of
+_UI_UnitField_maximumDisplaySize_feature = Maximum Display Size
