Simplify the definition of umit uris

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -475,3 +475,5 @@ _UI_DynamicUnit_inverseAssociation_feature = Inverse Association
 _UI_EditUnit_customiseValues_feature = Customise Values
 _UI_Service_partOf_feature = Part Of
 _UI_UnitField_maximumDisplaySize_feature = Maximum Display Size
+_UI_DeleteAction_uriElement_feature = Uri Element
+_UI_CreateUpdateUnit_createUriElement_feature = Create Uri Element
