Allow actions to be disabled

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -477,3 +477,5 @@ _UI_Service_partOf_feature = Part Of
 _UI_UnitField_maximumDisplaySize_feature = Maximum Display Size
 _UI_DeleteAction_uriElement_feature = Uri Element
 _UI_CreateUpdateUnit_createUriElement_feature = Create Uri Element
+_UI_InlineAction_disable_feature = Disable
+_UI_UnitSupportAction_disable_feature = Disable
