--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -413,3 +413,9 @@ _UI_Feature_autoKeyName_feature = Auto Key Name
 _UI_EntityOrView_keys_feature = Keys
 _UI_EntityOrView_autoKeyName_feature = Auto Key Name
 _UI_EntityOrView_labels_feature = Labels
+_UI_PathElement_type = Path Element
+_UI_StaticPathElement_type = Static Path Element
+_UI_DatePathElement_type = Date Path Element
+_UI_SingletonResource_uploadPath_feature = Upload Path
+_UI_StaticPathElement_element_feature = Element
+_UI_DatePathElement_format_feature = Format
