Allow multiple sources for a unit so that can edit/create multiple models simultaneously

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -479,3 +479,4 @@ _UI_DeleteAction_uriElement_feature = Uri Element
 _UI_CreateUpdateUnit_createUriElement_feature = Create Uri Element
 _UI_InlineAction_disable_feature = Disable
 _UI_UnitSupportAction_disable_feature = Disable
+_UI_DynamicUnit_services_feature = Services
