Avoid adding implicit authentication elements when using Symfony

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -480,3 +480,7 @@ _UI_CreateUpdateUnit_createUriElement_feature = Create Uri Element
 _UI_InlineAction_disable_feature = Disable
 _UI_UnitSupportAction_disable_feature = Disable
 _UI_DynamicUnit_services_feature = Services
+_UI_InterfaceField_placeholder_feature = Placeholder
+_UI_InterfaceField_validationPattern_feature = Validation Pattern
+_UI_DataTypeField_interfaceType_feature = Interface Type
+_UI_LocalAuthenticationSystem_useCaptcha_feature = Use Captcha
