--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -484,3 +484,4 @@ _UI_InterfaceField_placeholder_feature = Placeholder
 _UI_InterfaceField_validationPattern_feature = Validation Pattern
 _UI_DataTypeField_interfaceType_feature = Interface Type
 _UI_LocalAuthenticationSystem_useCaptcha_feature = Use Captcha
+_UI_Authentication_authorises_feature = Authorises
