Add URL attribute type

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -419,3 +419,6 @@ _UI_DatePathElement_type = Date Path Element
 _UI_SingletonResource_uploadPath_feature = Upload Path
 _UI_StaticPathElement_element_feature = Element
 _UI_DatePathElement_format_feature = Format
+_UI_SingletonURL_type = Singleton URL
+_UI_SingletonURL_displayValue_feature = Display Value
+_UI_SingletonURL_url_feature = Url
