Migrate keys from services to entities

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -422,3 +422,5 @@ _UI_DatePathElement_format_feature = Format
 _UI_SingletonURL_type = Singleton URL
 _UI_SingletonURL_displayValue_feature = Display Value
 _UI_SingletonURL_url_feature = Url
+_UI_EntityFeature_cardinality_feature = Cardinality
+_UI_EntityAssociation_contains_feature = Contains
