--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -486,3 +486,37 @@ _UI_DataTypeField_interfaceType_feature = Interface Type
 _UI_LocalAuthenticationSystem_useCaptcha_feature = Use Captcha
 _UI_Authentication_authorises_feature = Authorises
 _UI_ContentUnit_contentClass_feature = Content Class
+_UI_Service_serves_feature = Serves
+_UI_DynamicUnit_servicesNew_feature = Services New
+_UI_DynamicUnit_entities_feature = Entities
+_UI_UnitAttribute_type = Unit Attribute
+_UI_ServiceFeature_forcedValue_feature = Forced Value
+_UI_ServiceFeature_footer_feature = Footer
+_UI_ServiceFeature_headerClass_feature = Header Class
+_UI_ServiceFeature_inputClass_feature = Input Class
+_UI_ServiceFeature_displayClass_feature = Display Class
+_UI_ServiceFeature_footerClass_feature = Footer Class
+_UI_ServiceAttribute_attribute_feature = Attribute
+_UI_ServiceAttribute_obfuscateFormFields_feature = Obfuscate Form Fields
+_UI_ServiceAttribute_defaultValue_feature = Default Value
+_UI_ServiceAssociation_association_feature = Association
+_UI_UnitFeature_forcedValue_feature = Forced Value
+_UI_UnitFeature_footer_feature = Footer
+_UI_UnitFeature_headerClass_feature = Header Class
+_UI_UnitFeature_inputClass_feature = Input Class
+_UI_UnitFeature_displayClass_feature = Display Class
+_UI_UnitFeature_footerClass_feature = Footer Class
+_UI_UnitAttribute_attribute_feature = Attribute
+_UI_UnitAttribute_obfuscateFormFields_feature = Obfuscate Form Fields
+_UI_UnitAttribute_defaultValue_feature = Default Value
+_UI_UnitAttribute_placeholder_feature = Placeholder
+_UI_UnitAttribute_validationPattern_feature = Validation Pattern
+_UI_UnitAssociation_association_feature = Association
+_UI_UnitAssociation_displayOption_feature = Display Option
+_UI_UnitAssociation_valueDisplay_feature = Value Display
+_UI_DisplayElement_type = Display Element
+_UI_DisplayElement_displayLabel_feature = Display Label
+_UI_UnitAttribute_name_feature = Name
+_UI_UnitAssociation_name_feature = Name
+_UI_InterfaceField_cardinality_feature = Cardinality
+_UI_InterfaceField_required_feature = Required
