Switch child path referencing to use entity features

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -520,3 +520,13 @@ _UI_UnitAttribute_name_feature = Name
 _UI_UnitAssociation_name_feature = Name
 _UI_InterfaceField_cardinality_feature = Cardinality
 _UI_InterfaceField_required_feature = Required
+_UI_UnitAttribute_interfaceType_feature = Interface Type
+_UI_InterfaceField_interfaceType_feature = Interface Type
+_UI_ChildFeature_type = Child Feature
+_UI_ChildAttribute_type = Child Attribute
+_UI_ChildAssociation_type = Child Association
+_UI_ChildAttribute_name_feature = Name
+_UI_ChildAttribute_attribute_feature = Attribute
+_UI_ChildAssociation_name_feature = Name
+_UI_ChildAssociation_association_feature = Association
+_UI_ChildAssociation_childFeature_feature = Child Feature
