--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -424,3 +424,12 @@ _UI_SingletonURL_displayValue_feature = Display Value
 _UI_SingletonURL_url_feature = Url
 _UI_EntityFeature_cardinality_feature = Cardinality
 _UI_EntityAssociation_contains_feature = Contains
+_UI_FeatureReference_type = Feature Reference
+_UI_AttributeReference_type = Attribute Reference
+_UI_AssociationReference_type = Association Reference
+_UI_Association_childFeature_feature = Child Feature
+_UI_AttributeReference_attribute_feature = Attribute
+_UI_AssociationReference_association_feature = Association
+_UI_AssociationReference_childFeature_feature = Child Feature
+_UI_AttributeReference_name_feature = Name
+_UI_AssociationReference_name_feature = Name
