--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -530,3 +530,11 @@ _UI_ChildAttribute_attribute_feature = Attribute
 _UI_ChildAssociation_name_feature = Name
 _UI_ChildAssociation_association_feature = Association
 _UI_ChildAssociation_childFeature_feature = Child Feature
+_UI_ChildAssociation_parentTarget_feature = Parent Target
+_UI_ChildAssociation_source_feature = Source
+_UI_UnitAssociation_source_feature = Source
+_UI_UnitAssociation_features_feature = Features
+_UI_UnitAssociation_sourceName_feature = Source Name
+_UI_UnitAssociation_targetName_feature = Target Name
+_UI_ChildAssociation_sourceName_feature = Source Name
+_UI_ChildAssociation_targetName_feature = Target Name
