Make validation pattern an orm attribute property

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -433,3 +433,4 @@ _UI_AssociationReference_association_feature = Association
 _UI_AssociationReference_childFeature_feature = Child Feature
 _UI_AttributeReference_name_feature = Name
 _UI_AssociationReference_name_feature = Name
+_UI_Attribute_validationPattern_feature = Validation Pattern
