Allow logout uri to be specified

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -534,3 +534,11 @@ _UI_DynamicMenu_entityOrView_feature = Entity Or View
 _UI_DynamicMenu_title_feature = Title
 _UI_LocalAuthenticationSystem_user_feature = User
 _UI_LocalAuthenticationSystem_authentication_feature = Authentication
+_UI_LoginUnit_logoutUriElement_feature = Logout Uri Element
+_UI_LocalAuthenticationSystem_loginAttempt_feature = Login Attempt
+_UI_LocalAuthenticationSystem_autoLogin_feature = Auto Login
+_UI_LocalAuthenticationSystem_userKey_feature = User Key
+_UI_LocalAuthenticationSystem_authenticationKey_feature = Authentication Key
+_UI_AuthenticationKeyType_Email_literal = Email
+_UI_AuthenticationKeyType_ScreenName_literal = ScreenName
+_UI_AuthenticationKeyType_Username_literal = Username
