Allow control of when unit routing parameters are applied

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -542,3 +542,5 @@ _UI_LocalAuthenticationSystem_authenticationKey_feature = Authentication Key
 _UI_AuthenticationKeyType_Email_literal = Email
 _UI_AuthenticationKeyType_ScreenName_literal = ScreenName
 _UI_AuthenticationKeyType_Username_literal = Username
+_UI_Selectable_noRouteParameters_feature = No Route Parameters
+_UI_DynamicUnit_noRouteParameters_feature = No Route Parameters
