Correct naming of association ket types

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -544,3 +544,5 @@ _UI_AuthenticationKeyType_ScreenName_literal = ScreenName
 _UI_AuthenticationKeyType_Username_literal = Username
 _UI_Selectable_noRouteParameters_feature = No Route Parameters
 _UI_DynamicUnit_noRouteParameters_feature = No Route Parameters
+_UI_AuthenticationKeyTypes_Email_literal = Email
+_UI_AuthenticationKeyTypes_Username_literal = Username
