--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -546,3 +546,4 @@ _UI_Selectable_noRouteParameters_feature = No Route Parameters
 _UI_DynamicUnit_noRouteParameters_feature = No Route Parameters
 _UI_AuthenticationKeyTypes_Email_literal = Email
 _UI_AuthenticationKeyTypes_Username_literal = Username
+_UI_Selection_partOf_feature = Part Of
