Allow control of select fields on selection queries

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -547,3 +547,10 @@ _UI_DynamicUnit_noRouteParameters_feature = No Route Parameters
 _UI_AuthenticationKeyTypes_Email_literal = Email
 _UI_AuthenticationKeyTypes_Username_literal = Username
 _UI_Selection_partOf_feature = Part Of
+_UI_SelectionField_type = Selection Field
+_UI_Selection_fields_feature = Fields
+_UI_SelectEntityOrView_type = Select Entity Or View
+_UI_SelectAttribute_type = Select Attribute
+_UI_SelectEntityOrView_entityOrView_feature = Entity Or View
+_UI_SelectAttribute_attribute_feature = Attribute
+_UI_SelectField_type = Select Field
