Allow user defined operations in services

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -554,3 +554,13 @@ _UI_SelectAttribute_type = Select Attribute
 _UI_SelectEntityOrView_entityOrView_feature = Entity Or View
 _UI_SelectAttribute_attribute_feature = Attribute
 _UI_SelectField_type = Select Field
+_UI_FeatureSupportAction_uriElement_feature = Uri Element
+_UI_ServiceFunction_type = Service Function
+_UI_Service_functions_feature = Functions
+_UI_BusinessOperation_type = Business Operation
+_UI_FeatureSupportAction_operation_feature = Operation
+_UI_Service_operations_feature = Operations
+_UI_BusinessOperation_partOf_feature = Part Of
+_UI_BusinessOperation_resultType_feature = Result Type
+_UI_OperationResultTypes_None_literal = None
+_UI_OperationResultTypes_File_literal = File
