Allow feature support actions to control type of file created

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -564,3 +564,6 @@ _UI_BusinessOperation_partOf_feature = Part Of
 _UI_BusinessOperation_resultType_feature = Result Type
 _UI_OperationResultTypes_None_literal = None
 _UI_OperationResultTypes_File_literal = File
+_UI_BusinessOperation_resultMimeType_feature = Result Mime Type
+_UI_BusinessOperation_fileExtension_feature = File Extension
+_UI_FeatureSupportAction_fileExtension_feature = File Extension
