Allow control over serialising entities

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -434,3 +434,9 @@ _UI_AssociationReference_childFeature_feature = Child Feature
 _UI_AttributeReference_name_feature = Name
 _UI_AssociationReference_name_feature = Name
 _UI_Attribute_validationPattern_feature = Validation Pattern
+_UI_EntityOrView_serialisationExcluseAll_feature = Serialisation Excluse All
+_UI_Feature_serializationExpose_feature = Serialization Expose
+_UI_Feature_serializationGroups_feature = Serialization Groups
+_UI_Association_serializationMaxDepth_feature = Serialization Max Depth
+_UI_EntityOrView_serialisationExcludeAll_feature = Serialisation Exclude All
+_UI_EntityOrView_serializationExcludeAll_feature = Serialization Exclude All
