Allow change tracing to be conditional

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -440,3 +440,5 @@ _UI_Feature_serializationGroups_feature = Serialization Groups
 _UI_Association_serializationMaxDepth_feature = Serialization Max Depth
 _UI_EntityOrView_serialisationExcludeAll_feature = Serialisation Exclude All
 _UI_EntityOrView_serializationExcludeAll_feature = Serialization Exclude All
+_UI_OrmModel_databasePort_feature = Database Port
+_UI_OrmModel_logChanges_feature = Log Changes
