--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -442,3 +442,5 @@ _UI_EntityOrView_serialisationExcludeAll_feature = Serialisation Exclude All
 _UI_EntityOrView_serializationExcludeAll_feature = Serialization Exclude All
 _UI_OrmModel_databasePort_feature = Database Port
 _UI_OrmModel_logChanges_feature = Log Changes
+_UI_OrmModel_timestampCreation_feature = Timestamp Creation
+_UI_OrmModel_timestampUpdates_feature = Timestamp Updates
