Allow associations to use domain properties

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -444,3 +444,9 @@ _UI_OrmModel_databasePort_feature = Database Port
 _UI_OrmModel_logChanges_feature = Log Changes
 _UI_OrmModel_timestampCreation_feature = Timestamp Creation
 _UI_OrmModel_timestampUpdates_feature = Timestamp Updates
+_UI_AssociationKey_type = Association Key
+_UI_Association_keys_feature = Keys
+_UI_AssociationKey_keyFor_feature = Key For
+_UI_AssociationKey_key_feature = Key
+_UI_AssociationKey_columnName_feature = Column Name
+_UI_EntityAssociation_keys_feature = Keys
