Allow domain properties as primary keys

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -450,3 +450,8 @@ _UI_AssociationKey_keyFor_feature = Key For
 _UI_AssociationKey_key_feature = Key
 _UI_AssociationKey_columnName_feature = Column Name
 _UI_EntityAssociation_keys_feature = Keys
+_UI_AssociationKey_sourceKey_feature = Source Key
+_UI_AssociationKey_targetKey_feature = Target Key
+_UI_EntityAttribute_primaryKey_feature = Primary Key
+_UI_AssociationKey_sourceFeature_feature = Source Feature
+_UI_AssociationKey_targetFeature_feature = Target Feature
