Refactor autehticatin properties

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -567,3 +567,13 @@ _UI_OperationResultTypes_File_literal = File
 _UI_BusinessOperation_resultMimeType_feature = Result Mime Type
 _UI_BusinessOperation_fileExtension_feature = File Extension
 _UI_FeatureSupportAction_fileExtension_feature = File Extension
+_UI_WafModel_provideRestApi_feature = Provide Rest Api
+_UI_API_type = API
+_UI_Resource_type = Resource
+_UI_WafModel_restApi_feature = Rest Api
+_UI_API_resources_feature = Resources
+_UI_Resource_entityOrView_feature = Entity Or View
+_UI_CasAuthentication_user_feature = User
+_UI_CasAuthentication_userKey_feature = User Key
+_UI_Authentication_user_feature = User
+_UI_Authentication_userKey_feature = User Key
