Support predesigned site templates

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -577,3 +577,4 @@ _UI_CasAuthentication_user_feature = User
 _UI_CasAuthentication_userKey_feature = User Key
 _UI_Authentication_user_feature = User
 _UI_Authentication_userKey_feature = User Key
+_UI_WafModel_siteTemplate_feature = Site Template
