Flag when custom orm types may be used

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -455,3 +455,5 @@ _UI_AssociationKey_targetKey_feature = Target Key
 _UI_EntityAttribute_primaryKey_feature = Primary Key
 _UI_AssociationKey_sourceFeature_feature = Source Feature
 _UI_AssociationKey_targetFeature_feature = Target Feature
+_UI_OrmModel_hasCustonOrmTypes_feature = Has Custon Orm Types
+_UI_OrmModel_hasCustomOrmTypes_feature = Has Custom Orm Types
