--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -457,3 +457,4 @@ _UI_AssociationKey_sourceFeature_feature = Source Feature
 _UI_AssociationKey_targetFeature_feature = Target Feature
 _UI_OrmModel_hasCustonOrmTypes_feature = Has Custon Orm Types
 _UI_OrmModel_hasCustomOrmTypes_feature = Has Custom Orm Types
+_UI_EntityFeature_primaryKey_feature = Primary Key
