Allow user control of auto keys

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -458,3 +458,5 @@ _UI_AssociationKey_targetFeature_feature = Target Feature
 _UI_OrmModel_hasCustonOrmTypes_feature = Has Custon Orm Types
 _UI_OrmModel_hasCustomOrmTypes_feature = Has Custom Orm Types
 _UI_EntityFeature_primaryKey_feature = Primary Key
+_UI_EntityOrView_autoKeyGenerationStrategy_feature = Auto Key Generation Strategy
+_UI_EntityOrView_autoKeyPersistentType_feature = Auto Key Persistent Type
