Allow formatting of model labels of date type

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -460,3 +460,4 @@ _UI_OrmModel_hasCustomOrmTypes_feature = Has Custom Orm Types
 _UI_EntityFeature_primaryKey_feature = Primary Key
 _UI_EntityOrView_autoKeyGenerationStrategy_feature = Auto Key Generation Strategy
 _UI_EntityOrView_autoKeyPersistentType_feature = Auto Key Persistent Type
+_UI_ModelLabelAttribute_dateFormat_feature = Date Format
