Introduce concept of virtual (incomplete) associations

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -461,3 +461,6 @@ _UI_EntityFeature_primaryKey_feature = Primary Key
 _UI_EntityOrView_autoKeyGenerationStrategy_feature = Auto Key Generation Strategy
 _UI_EntityOrView_autoKeyPersistentType_feature = Auto Key Persistent Type
 _UI_ModelLabelAttribute_dateFormat_feature = Date Format
+_UI_EntityOrView_encodeUriKey_feature = Encode Uri Key
+_UI_Feature_encodeUriKey_feature = Encode Uri Key
+_UI_Association_virtual_feature = Virtual
