--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -578,3 +578,5 @@ _UI_CasAuthentication_userKey_feature = User Key
 _UI_Authentication_user_feature = User
 _UI_Authentication_userKey_feature = User Key
 _UI_WafModel_siteTemplate_feature = Site Template
+_UI_ContentUnit_alternative_feature = Alternative
+_UI_ContentUnit_homeUnit_feature = Home Unit
