Allow identification of entity that should implement user interface

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -464,3 +464,4 @@ _UI_ModelLabelAttribute_dateFormat_feature = Date Format
 _UI_EntityOrView_encodeUriKey_feature = Encode Uri Key
 _UI_Feature_encodeUriKey_feature = Encode Uri Key
 _UI_Association_virtual_feature = Virtual
+_UI_EntityOrView_implementsUserInterface_feature = Implements User Interface
