--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -580,3 +580,4 @@ _UI_Authentication_userKey_feature = User Key
 _UI_WafModel_siteTemplate_feature = Site Template
 _UI_ContentUnit_alternative_feature = Alternative
 _UI_ContentUnit_homeUnit_feature = Home Unit
+_UI_Selection_distinct_feature = Distinct
