Rename virtual associations to pseudo associations

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -581,3 +581,4 @@ _UI_WafModel_siteTemplate_feature = Site Template
 _UI_ContentUnit_alternative_feature = Alternative
 _UI_ContentUnit_homeUnit_feature = Home Unit
 _UI_Selection_distinct_feature = Distinct
+_UI_BusinessOperation_uses_feature = Uses
