--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -582,3 +582,5 @@ _UI_ContentUnit_alternative_feature = Alternative
 _UI_ContentUnit_homeUnit_feature = Home Unit
 _UI_Selection_distinct_feature = Distinct
 _UI_BusinessOperation_uses_feature = Uses
+_UI_UnitField_displayOption_feature = Display Option
+_UI_UnitField_collectionDisplayOption_feature = Collection Display Option
