Allow display of menu entry to depend on role

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -584,3 +584,4 @@ _UI_Selection_distinct_feature = Distinct
 _UI_BusinessOperation_uses_feature = Uses
 _UI_UnitField_displayOption_feature = Display Option
 _UI_UnitField_collectionDisplayOption_feature = Collection Display Option
+_UI_MenuEntry_requiresRole_feature = Requires Role
