Allow default selections for edit units

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -585,3 +585,6 @@ _UI_BusinessOperation_uses_feature = Uses
 _UI_UnitField_displayOption_feature = Display Option
 _UI_UnitField_collectionDisplayOption_feature = Collection Display Option
 _UI_MenuEntry_requiresRole_feature = Requires Role
+_UI_DynamicUnit_customiseRender_feature = Customise Render
+_UI_EditUnit_defaultSelection_feature = Default Selection
+_UI_EditUnit_title_feature = Title
