Allow control of allowed alternations to collections

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -466,3 +466,11 @@ _UI_Feature_encodeUriKey_feature = Encode Uri Key
 _UI_Association_virtual_feature = Virtual
 _UI_EntityOrView_implementsUserInterface_feature = Implements User Interface
 _UI_Association_pseudo_feature = Pseudo
+_UI_EntityFeature_collectionAllowAdd_feature = Collection Allow Add
+_UI_EntityFeature_collectionAllowRemove_feature = Collection Allow Remove
+_UI_isHasChoices_isA_literal = isA
+_UI_isHasChoices_hasA_literal = hasA
+_UI_EntityFeature_isHas_feature = Is Has
+_UI_IsHasChoices_isA_literal = isA
+_UI_IsHasChoices_hasA_literal = hasA
+_UI_EntityFeature_booleanIsHasChoice_feature = Boolean Is Has Choice
