--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -588,3 +588,5 @@ _UI_MenuEntry_requiresRole_feature = Requires Role
 _UI_DynamicUnit_customiseRender_feature = Customise Render
 _UI_EditUnit_defaultSelection_feature = Default Selection
 _UI_EditUnit_title_feature = Title
+_UI_UnitField_collectionAllowAdd_feature = Collection Allow Add
+_UI_UnitField_collectionAllowRemove_feature = Collection Allow Remove
