Allow display/enabling of action links to be conditional

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -590,3 +590,5 @@ _UI_EditUnit_defaultSelection_feature = Default Selection
 _UI_EditUnit_title_feature = Title
 _UI_UnitField_collectionAllowAdd_feature = Collection Allow Add
 _UI_UnitField_collectionAllowRemove_feature = Collection Allow Remove
+_UI_InlineAction_disableWhen_feature = Disable When
+_UI_InlineAction_removeWhen_feature = Remove When
