Allow control of name pluralisation

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -592,3 +592,4 @@ _UI_UnitField_collectionAllowAdd_feature = Collection Allow Add
 _UI_UnitField_collectionAllowRemove_feature = Collection Allow Remove
 _UI_InlineAction_disableWhen_feature = Disable When
 _UI_InlineAction_removeWhen_feature = Remove When
+_UI_SelectionParameter_optional_feature = Optional
