Association collection controls with all features not just entity features

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -476,3 +476,5 @@ _UI_IsHasChoices_hasA_literal = hasA
 _UI_EntityFeature_booleanIsHasChoice_feature = Boolean Is Has Choice
 _UI_NamedElement_singletonName_feature = Singleton Name
 _UI_NamedElement_pluralisedName_feature = Pluralised Name
+_UI_Feature_collectionAllowAdd_feature = Collection Allow Add
+_UI_Feature_collectionAllowRemove_feature = Collection Allow Remove
