Reverse the sense of action predicates

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -612,3 +612,6 @@ _UI_PathReferenceElement_type = Path Reference Element
 _UI_PathReferenceElement_actual_feature = Actual
 _UI_PathReferenceElement_childReference_feature = Child Reference
 _UI_ChildPathReference_parent_feature = Parent
+_UI_InlineAction_enableWhen_feature = Enable When
+_UI_InlineAction_displayWhen_feature = Display When
+_UI_EditUnit_enableWhen_feature = Enable When
