Avoid unused form customisation placeholders

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -615,3 +615,4 @@ _UI_ChildPathReference_parent_feature = Parent
 _UI_InlineAction_enableWhen_feature = Enable When
 _UI_InlineAction_displayWhen_feature = Display When
 _UI_EditUnit_enableWhen_feature = Enable When
+_UI_WafModel_allowTypeCustomisation_feature = Allow Type Customisation
