Allow singleton and plural names only on entities and view, and their features

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -478,3 +478,7 @@ _UI_NamedElement_singletonName_feature = Singleton Name
 _UI_NamedElement_pluralisedName_feature = Pluralised Name
 _UI_Feature_collectionAllowAdd_feature = Collection Allow Add
 _UI_Feature_collectionAllowRemove_feature = Collection Allow Remove
+_UI_EntityOrView_singletonName_feature = Singleton Name
+_UI_EntityOrView_pluralisedName_feature = Pluralised Name
+_UI_EntityFeature_singletonName_feature = Singleton Name
+_UI_EntityFeature_pluralisedName_feature = Pluralised Name
