Allow selection of input technology (on forms)

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -620,3 +620,6 @@ _UI_ImageUnit_type = Image Unit
 _UI_SliderUnit_type = Slider Unit
 _UI_ImageUnit_defaultSelection_feature = Default Selection
 _UI_WafModel_responsiveTopMenu_feature = Responsive Top Menu
+_UI_WafModel_inputTechnology_feature = Input Technology
+_UI_InputTechnologies_Html_literal = Html
+_UI_InputTechnologies_jQueryUI_literal = jQueryUI
