Allow control of number of entries in index indices

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -623,3 +623,5 @@ _UI_WafModel_responsiveTopMenu_feature = Responsive Top Menu
 _UI_WafModel_inputTechnology_feature = Input Technology
 _UI_InputTechnologies_Html_literal = Html
 _UI_InputTechnologies_jQueryUI_literal = jQueryUI
+_UI_IndexUnit_nextNpages_feature = Next Npages
+_UI_IndexUnit_previousNpages_feature = Previous Npages
