Remember me functionality

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -627,3 +627,5 @@ _UI_IndexUnit_nextNpages_feature = Next Npages
 _UI_IndexUnit_previousNpages_feature = Previous Npages
 _UI_IndexUnit_useDisabledPreviousNextPageLinks_feature = Use Disabled Previous Next Page Links
 _UI_IndexUnit_useDisabledPageLinks_feature = Use Disabled Page Links
+_UI_LocalAuthenticationSystem_allowRememberMe_feature = Allow Remember Me
+_UI_ContentUnit_requiresRole_feature = Requires Role
