Allow placeholders on filter parameters

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -629,3 +629,5 @@ _UI_IndexUnit_useDisabledPreviousNextPageLinks_feature = Use Disabled Previous N
 _UI_IndexUnit_useDisabledPageLinks_feature = Use Disabled Page Links
 _UI_LocalAuthenticationSystem_allowRememberMe_feature = Allow Remember Me
 _UI_ContentUnit_requiresRole_feature = Requires Role
+_UI_IndexUnit_emptyMessage_feature = Empty Message
+_UI_FilterParameter_placeholder_feature = Placeholder
