Distinguish globally unique and container unique

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -482,3 +482,5 @@ _UI_EntityOrView_singletonName_feature = Singleton Name
 _UI_EntityOrView_pluralisedName_feature = Pluralised Name
 _UI_EntityFeature_singletonName_feature = Singleton Name
 _UI_EntityFeature_pluralisedName_feature = Pluralised Name
+_UI_SingletonAttribute_containedUnique_feature = Contained Unique
+_UI_SingletonAttribute_containerUnique_feature = Container Unique
