--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -631,3 +631,4 @@ _UI_LocalAuthenticationSystem_allowRememberMe_feature = Allow Remember Me
 _UI_ContentUnit_requiresRole_feature = Requires Role
 _UI_IndexUnit_emptyMessage_feature = Empty Message
 _UI_FilterParameter_placeholder_feature = Placeholder
+_UI_UnitField_title_feature = Title
