Default values for optional singletons and empty collections

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -632,3 +632,6 @@ _UI_ContentUnit_requiresRole_feature = Requires Role
 _UI_IndexUnit_emptyMessage_feature = Empty Message
 _UI_FilterParameter_placeholder_feature = Placeholder
 _UI_UnitField_title_feature = Title
+_UI_GridUnit_type = Grid Unit
+_UI_ImageUnit_imageProperty_feature = Image Property
+_UI_UnitFeature_nullDisplayValue_feature = Null Display Value
