Allow unique and container unique groups

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -484,3 +484,7 @@ _UI_EntityFeature_singletonName_feature = Singleton Name
 _UI_EntityFeature_pluralisedName_feature = Pluralised Name
 _UI_SingletonAttribute_containedUnique_feature = Contained Unique
 _UI_SingletonAttribute_containerUnique_feature = Container Unique
+_UI_AssociationKey_targetColumnName_feature = Target Column Name
+_UI_AssociationKey_sourceColumnName_feature = Source Column Name
+_UI_EntityOrView_unique_feature = Unique
+_UI_EntityOrView_containerUnqiue_feature = Container Unqiue
