Correct spelling of unique

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -487,4 +487,4 @@ _UI_SingletonAttribute_containerUnique_feature = Container Unique
 _UI_AssociationKey_targetColumnName_feature = Target Column Name
 _UI_AssociationKey_sourceColumnName_feature = Source Column Name
 _UI_EntityOrView_unique_feature = Unique
-_UI_EntityOrView_containerUnqiue_feature = Container Unqiue
+_UI_EntityOrView_containerUnique_feature = Container Unique
